[package]
edition = "2021"
name = "url_bug"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zksync = {git = "https://github.com/matter-labs/zksync-era.git"}
zksync_eth_signer = {git = "https://github.com/matter-labs/zksync-era.git"}
